Fix sidebar layout on mobile

--- a/src/assets/css/sidebar.css
+++ b/src/assets/css/sidebar.css
@@ -20,8 +20,8 @@
 }
 
 @media screen and (max-width: 768px) {
-  #sidebar nav {
-    position: absolute;
+  #sidebar {
+    position: relative;
     top: 0;
     left: 0;
     height: 100%;
@@ -29,9 +29,11 @@
     z-index: 1;
     transition: transform 250ms;
     transform: translateX(-100%);
+    transform: translateX(-100%);
+    /* width: 0; */
   }
 
-  #sidebar.open nav {
+  #sidebar.open {
     transform: translateX(0);
   }
 
